--- a/stages.html
+++ b/stages.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Этапы развития</title>
+  <title>Современные исследования</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
@@ -21,6 +21,7 @@
           <li><a href="stages.html" class="hover:text-blue-500">Этапы</a></li>
           <li><a href="application.html" class="hover:text-blue-500">Применение</a></li>
           <li><a href="future.html" class="hover:text-blue-500">Перспективы</a></li>
+          <li><a href="main.html" class="nav-link px-3 py-1 rounded-md hover:bg-blue-50 hover:text-blue-600 transition">Титул</a></li>
         </ul>
       </nav>
     </div>
@@ -29,30 +30,67 @@
   <!-- Основной контент -->
   <main class="pt-20 container mx-auto px-4 py-12">
     <div class="text-center">
-      <i class="fas fa-chart-line text-6xl text-blue-500 mb-4"></i>
-      <h1 class="text-4xl font-bold mb-8">Этапы развития</h1>
+      <i class="fas fa-flask text-6xl text-blue-500 mb-4"></i>
+      <h1 class="text-4xl font-bold mb-8">Современные исследования</h1>
     </div>
     <div class="bg-white p-6 rounded-lg shadow-md">
-      <h2 class="text-2xl font-bold mb-4">1970-1980-е годы</h2>
-      <p class="text-lg mb-4">В 1970-е годы Джон Холланд и его ученики развивают теорию схем (schema theory), которая объясняет, как ГА работают на уровне битовых строк. Введение понятия "строительных блоков" — небольших фрагментов хромосом, которые могут комбинироваться для создания лучших решений.</p>
-      <p class="text-lg mb-4">В 1980-е годы ГА начинают использоваться для решения задач оптимизации в инженерии и компьютерных науках. Пример: оптимизация формы крыла самолета, проектирование электрических схем. Появление первых программных реализаций ГА.</p>
+      <h2 class="text-2xl font-bold mb-4">Разработка энергоэффективных алгоритмов</h2>
+      <p class="text-lg mb-4">Ученые работают над созданием ГА, которые потребляют меньше вычислительных ресурсов и энергии. Пример: использование ГА в мобильных устройствах и IoT-устройствах.</p>
 
-      <h2 class="text-2xl font-bold mb-4">1990-е годы</h2>
-      <p class="text-lg mb-4">В 1990-е годы ГА активно применяются в новых областях, таких как биоинформатика, робототехника и искусственный интеллект. Примеры: оптимизация генетических последовательностей, обучение нейронных сетей, разработка алгоритмов для игровых стратегий.</p>
-      <p class="text-lg mb-4">Развитие параллельных и распределенных ГА: появление методов, позволяющих запускать ГА на нескольких процессорах или компьютерах одновременно. Это значительно ускорило решение сложных задач.</p>
+      <h2 class="text-2xl font-bold mb-4">Интеграция с квантовыми вычислениями</h2>
+      <p class="text-lg mb-4">Исследуется возможность использования квантовых компьютеров для ускорения работы ГА. Пример: квантовые генетические алгоритмы для решения задач оптимизации.</p>
 
-      <h2 class="text-2xl font-bold mb-4">2000-е годы</h2>
-      <p class="text-lg mb-4">В 2000-е годы ГА начинают использоваться в задачах, связанных с большими данными (Big Data). Примеры: оптимизация работы поисковых систем, анализ больших объемов генетических данных, применение в финансовой аналитике для прогнозирования рынков.</p>
-      <p class="text-lg mb-4">Развитие адаптивных ГА: появление алгоритмов, которые автоматически настраивают свои параметры в процессе работы. Это делает ГА более универсальными и эффективными.</p>
+      <h2 class="text-2xl font-bold mb-4">Применение в задачах Big Data</h2>
+      <p class="text-lg mb-4">ГА адаптируются для работы с огромными объемами данных, что открывает новые возможности в анализе и прогнозировании. Пример: оптимизация алгоритмов обработки данных в реальном времени.</p>
+
+      <h2 class="text-2xl font-bold mb-4">Самообучающиеся ГА</h2>
+      <p class="text-lg mb-4">Разработка алгоритмов, которые могут автоматически настраивать свои параметры в процессе работы. Пример: ГА для управления роботами в динамической среде.</p>
     </div>
   </main>
 
-  <!-- Подвал -->
-  <footer class="bg-gray-800 text-white py-4 mt-12">
-    <div class="container mx-auto px-4 text-center">
-      <p>© 2025 СПбГУТ. Железинский ИБ-36С.</p>
+<!-- Подвал -->
+<footer class="bg-gray-900 text-gray-300 pt-12 pb-8">
+  <div class="container mx-auto px-4">
+    <div class="flex flex-col md:flex-row justify-between items-center">
+      <!-- Лого и описание -->
+      <div class="flex flex-col items-center md:items-start mb-6 md:mb-0">
+        <div class="flex items-center mb-3">
+          <div class="bg-blue-600 p-2 rounded-lg mr-3">
+            <i class="fas fa-dna text-white text-xl"></i>
+          </div>
+          <span class="text-xl font-bold text-white">Генетические алгоритмы</span>
+        </div>
+        <p class="text-sm text-center md:text-left">
+          Исследовательский проект СПбГУТ
+        </p>
+      </div>
+
+      <!-- Контакты -->
+      <div class="flex flex-col items-center md:items-end">
+        <div class="flex space-x-4 mb-4">
+          <a href="https://github.com/lewassee" target="_blank" 
+             class="bg-gray-800 hover:bg-blue-600 w-10 h-10 rounded-full flex items-center justify-center transition-all duration-300 transform hover:-translate-y-1"
+             aria-label="GitHub">
+            <i class="fab fa-github text-lg"></i>
+          </a>
+          <a href="https://t.me/pyroffy" target="_blank" 
+             class="bg-gray-800 hover:bg-blue-600 w-10 h-10 rounded-full flex items-center justify-center transition-all duration-300 transform hover:-translate-y-1"
+             aria-label="Telegram">
+            <i class="fab fa-telegram text-lg"></i>
+          </a>
+          <a href="mailto:zhelezinskym@ya.ru" 
+             class="bg-gray-800 hover:bg-blue-600 w-10 h-10 rounded-full flex items-center justify-center transition-all duration-300 transform hover:-translate-y-1"
+             aria-label="Email">
+            <i class="fas fa-envelope text-lg"></i>
+          </a>
+        </div>
+        <p class="text-sm text-gray-500">
+          © 2025 Железинский М.В., ИБ-36С
+        </p>
+      </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
   <!-- Скрипт -->
   <script src="script.js"></script>
