--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
 
             <!-- Основная информация -->
             <div class="text-center mb-6 sm:mb-8">
-                <h2 class="text-2xl sm:text-3xl font-semibold mb-4 sm:mb-6 text-indigo-700">Титульный лист практического задания</h2>
+                <h2 class="text-2xl sm:text-3xl font-semibold mb-4 sm:mb-6 text-indigo-700">Титульный лист контрольной работы</h2>
                 
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6 text-left info-grid">
                     <div class="bg-gray-50 p-3 sm:p-4 rounded-lg">
@@ -85,8 +85,8 @@
                         <h3 class="font-medium text-gray-500 mb-2 flex items-center text-sm sm:text-base">
                             <i class="fas fa-book mr-2 text-blue-500"></i> Дисциплина
                         </h3>
-                        <p class="text-sm sm:text-base">Информационные технологии</p>
-                        <p class="mt-2 text-sm sm:text-base">Практическое задание 2</p>
+                        <p class="text-sm sm:text-base">Эргономика и дизайн графических интерфейсов</p>
+                        <p class="mt-2 text-sm sm:text-base">Контрольная работа</p>
                     </div>
                     
                     <div class="bg-gray-50 p-3 sm:p-4 rounded-lg">
@@ -103,7 +103,7 @@
                             <i class="fas fa-calendar-alt mr-2 text-blue-500"></i> Даты
                         </h3>
                         <p class="text-sm sm:text-base">Дата сдачи работы: <span class="text-gray-400">__________</span></p>
-                        <p class="mt-2 text-sm sm:text-base">Преподаватель: Шиян А.А.</p>
+                        <p class="mt-2 text-sm sm:text-base">Преподаватель: </p>
                     </div>
                 </div>
             </div>
