--- a/test3.html
+++ b/test3.html
@@ -28,17 +28,17 @@
                 
                 <table width="100%" cellspacing="0" cellpadding="0" style="width: 100%; margin-top: 30px; border-spacing: 20px 0; border-collapse: separate;">
                     <tr>
-                        <td style="width: 33.33%; background-color: #E8F0F7; border-radius: 16px; vertical-align: top; padding: 30px 25px 35px 25px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05); text-align: center;">
-                            <h3 style="margin-top: 0; font-size: 18px; font-weight: 600; color: #4A5568;">Оперативные данные</h3>
-                            <p style="margin: 5px 0 0; color: #718096; font-size: 15px; line-height: 1.7;">Получайте текущие значения тегов в реальном времени</p>
+                        <td style="width: 33.33%; background-color: #6B8CAE; border-radius: 16px; vertical-align: top; padding: 30px 25px 35px 25px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05); text-align: center;">
+                            <h3 style="margin-top: 0; font-size: 18px; font-weight: 600; color: #ffffff;">Оперативные данные</h3>
+                            <p style="margin: 5px 0 0; color: #E8F0F7; font-size: 15px; line-height: 1.7;">Получайте текущие значения тегов в реальном времени</p>
                         </td>
-                        <td style="width: 33.33%; background-color: #E8F0F7; border-radius: 16px; vertical-align: top; padding: 30px 25px 35px 25px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05); text-align: center;">
-                            <h3 style="margin-top: 0; font-size: 18px; font-weight: 600; color: #4A5568;">Исторические данные</h3>
-                            <p style="margin: 5px 0 0; color: #718096; font-size: 15px; line-height: 1.7;">Извлекайте архивные данные</p>
+                        <td style="width: 33.33%; background-color: #6B8CAE; border-radius: 16px; vertical-align: top; padding: 30px 25px 35px 25px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05); text-align: center;">
+                            <h3 style="margin-top: 0; font-size: 18px; font-weight: 600; color: #ffffff;">Исторические данные</h3>
+                            <p style="margin: 5px 0 0; color: #E8F0F7; font-size: 15px; line-height: 1.7;">Извлекайте архивные данные</p>
                         </td>
-                        <td style="width: 33.33%; background-color: #E8F0F7; border-radius: 16px; vertical-align: top; padding: 30px 25px 35px 25px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05); text-align: center;">
-                            <h3 style="margin-top: 0; font-size: 18px; font-weight: 600; color: #4A5568;">События</h3>
-                            <p style="margin: 5px 0 0; color: #718096; font-size: 15px; line-height: 1.7;">Обрабатывайте события</p>
+                        <td style="width: 33.33%; background-color: #6B8CAE; border-radius: 16px; vertical-align: top; padding: 30px 25px 35px 25px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05); text-align: center;">
+                            <h3 style="margin-top: 0; font-size: 18px; font-weight: 600; color: #ffffff;">События</h3>
+                            <p style="margin: 5px 0 0; color: #E8F0F7; font-size: 15px; line-height: 1.7;">Обрабатывайте события</p>
                         </td>
                     </tr>
                 </table>
@@ -559,4 +559,3 @@ self.data_file = <span style="color: #93c5fd;">f"alpha_data_</span>{timestamp}<s
     </table>
 </body>
 </html>
-
