--- a/test3.html
+++ b/test3.html
@@ -474,7 +474,7 @@ items = []
 
                 <div style="background-color: #ffffff; border-radius: 12px; padding: 20px; margin-top: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
                     <h4 style="font-weight: 600; font-size: 16px; margin:0 0 5px 0; color: #4A5568;">Чтение текущих значений</h4>
-                    <p style="color: #718096; margin: 0 0 10px 0; font-size: 14px;">Итерация по элементам и запрос их текущего значения (VQT).</p>
+                    <p style="color: #718096; margin: 0 0 10px 0; font-size: 14px;">Итерация по элементам и запрос их текущего значения.</p>
                     <div style="background-color: #2D3748; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <div style="background-color: #4A5568; padding: 8px 12px;">
                             <span style="display: inline-block; width: 12px; height: 12px; background-color: #f87171; border-radius: 50%;"></span>
@@ -559,3 +559,4 @@ self.data_file = <span style="color: #93c5fd;">f"alpha_data_</span>{timestamp}<s
     </table>
 </body>
 </html>
+
